# himake

./: README-zh.md  README.md  cmake_project.py  hikit-info.json  himake  himake.py  release-notes.md
template/app/: CMakeLists.txt
template/c_project/: .gitignore  CMakeLists.txt
template/c_project/apps/: CMakeLists.txt  main.c
template/c_project/apps/main/: CMakeLists.txt  main.c
template/c_project/include/: project_name.h
template/c_project/src/: project_name.c
